# njit-algs-play

./: .envrc  pyproject.toml
src/algs/trees/: BST.py
src/tests/: bst_test.py
tests/: bst_test.py
