[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
autopep8 = "^1.5.3"
jupyterlab = "^2.2.2"
pylint = "^2.5.3"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
